# Live-Text-Editor

./: .gitignore  BUG.txt  CMakeLists.txt  README.md  TODO.txt
Tests/: TestGui.cpp  TestGui.pro
client/: CDRTThread.h  CRDT.cpp  CRDT.h  Controller.cpp  Controller.h  Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  User.cpp  User.h  editor.cpp  editor.h  editor.ui  main.cpp  main2.cpp  resource.qrc
client/CRDT/: CDRTThread.cpp  CDRTThread.h  CRDT.cpp  CRDT.h
client/Controller/: Controller.cpp  Controller.h
client/Editor/: TextEdit.cpp  TextEdit.h  editor.cpp  editor.h  editor.ui
client/Editor/toggle_switch/: ToggleSwitch.cpp  ToggleSwitch.h  style.h
client/Networking/: Client.cpp  Client.h  Messanger.cpp  Messanger.h
client/Networking/common/: commonFunctions.cpp  commonFunctions.h
client/Networking/message/: Message.h
client/User/: User.cpp  User.h
client/ui/: ShowFiles.h  addfile.cpp  addfile.ui  clickablelabel.h  connection.cpp  connection.h  connection.ui  customwidget.cpp  customwidget.h  customwidget.ui  editaccount.h  editaccount.ui  loading.cpp  loading.h  login.cpp  login.h  login.ui  registration.cpp  registration.h  registration.ui  resources.qrc  sharefile.cpp  sharefile.h  sharefile.ui  sharefile.ui.autosave  showFiles.cpp  showFiles.h  showFiles.ui  ui_login.h  ui_registration.h
client/ui/AddFile/: addfile.cpp  addfile.h  addfile.ui
client/ui/Connection/: connection.cpp  connection.h  connection.ui
client/ui/CreateFile/: createfile.cpp  createfile.h  createfile.ui
client/ui/CustomWidget/: customwidget.cpp  customwidget.h  customwidget.ui
client/ui/CustomWidgetUsername/: customwidgetusername.cpp  customwidgetusername.h  customwidgetusername.ui
client/ui/EditAccount/: editaccount.cpp  editaccount.h  editaccount.ui
client/ui/FileInformation/: fileinformation.cpp  fileinformation.h  fileinformation.ui
client/ui/Loading/: loading.cpp  loading.ui
client/ui/Login/: login.cpp  login.h  login.ui
client/ui/Registration/: registration.cpp  registration.h  registration.ui
client/ui/ShareFile/: sharefile.cpp  sharefile.ui
client/ui/ShowFiles/: showFiles.cpp  showFiles.h  showFiles.ui
client/utils/: CharFormat.h  Character.cpp  Character.h  Constants.h  Identifier.cpp  Identifier.h  InsertCharacter.h  OtherCursor.cpp  OtherCursor.h  Pos.cpp  Pos.h  Version.cpp  Version.h  VersionVector.cpp  VersionVector.h
common/: Constants.h  Message.h  commonFunctions.cpp  commonFunctions.h
server/: CRDT.cpp  CRDT.h  Database.cpp  Database.h  main.cpp
server/CRDT/: CRDT.cpp  CRDT.h
server/DB/: Database.cpp  Database.h
server/Networking/: Server.cpp  Server.h  Thread.cpp  Thread.h
server/Networking/common/: commonFunctions.cpp  commonFunctions.h
server/Networking/message/: Message.h
server/SimpleCrypt/: SimpleCrypt.cpp  SimpleCrypt.h
server/Utils/: Constants.h  Utilities.cpp  Utilities.h
textEditor/: CMakeLists.txt  CRDT.cpp  CRDT.h  Character.cpp  Controller.h  Editor.cpp  Editor.h  Identifier.cpp  Pos.cpp  Pos.h  VersionVector.cpp  VersionVector.h  main.cpp
textEditor/utils/: Character.h  Identifier.h  Pos.cpp  Version.h
texteditor/: CMakeLists.txt  main.cpp  textedit.cpp  textedit.h  textedit.qrc
